test/e2e/fixtures/mapping-add-request-headers/queries.json
[
  {
    "url": "/mapping-add-request-headers/",
    "method": "GET",
    "headers": {
      "zoo": "ZooZ",
      "aoo": "AooA",
      "boo": "BooB",
      "foo": "FooF"
    }
  }
]
